# test-cuda

./: CMakeLists.txt
src/: cublas_example.cu  dynamics_integration.cu  matrix_operations.cu  minimal_cuda.cu
